# teamy

./: .gitignore  Cargo.toml
src/: bot.rs  command.rs  command_info.rs  consts.rs  containers.rs  db.rs  framework.rs  interaction.rs  loops.rs  main.rs  message.rs  secrets.rs  utils.rs  web_scraper.rs
src/commands/: based.rs  bonjour.rs  help.rs  id.rs  latency.rs  mod.rs  nerd.rs  ping.rs  roll.rs  slide.rs
src/commands/admin/: register.rs
src/commands/general/: based.rs  bonjour.rs  hello.rs  help.rs  id.rs  mod.rs  nerd.rs  ping.rs  roll.rs  slide.rs  tg.rs
src/commands/macros/: add.rs  clear.rs  del.rs  edit.rs  macro.rs  mod.rs  setup.rs  show.rs
src/commands/pdx/: dd.rs  mod.rs  model.rs  pdx.rs  setup.rs  show.rs
