[package]
name = "teamy"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bson = { version = "2.6.1", features = ["chrono-0_4"] }
chrono = "0.4.26"
itertools = "0.10.5"
mongodb = "2.5.0"
rand = "0.8.5"
regex = "1.8.4"
reqwest = {version = "0.11.18", features = ["blocking"]} 
serde = "1.0.164"
serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "cache", "framework", "standard_framework", "utils"] }
shuttle-runtime = "0.18.0"
shuttle-secrets = "0.18.0"
shuttle-serenity = "0.18.0"
scraper = "0.17.1"
tokio = "1.28.2"
tracing = "0.1.37"
sys-info = "0.9.1"
